tests/workflow/positive/initial-self-loop-2.s
@initial
go1() { stay() }

@initial
go2() { terminate() }
